update docs added file upload
