# app/Http/Controllers/TodoController.php
@@ -262,4 +262,39 @@ class TodoController extends Controller
             return response()->json(["msg"=>$exception->getMessage()],404);
         }
     }
+
+    /**
+     * Upload file
+     * @OA\Post(
+     *   path="/api/todo/upload",
+     *   summary="Upload document",
+     *   description="",
+     *   tags={"Media"},
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\MediaType(
+     *       mediaType="application/octet-stream",
+     *       @OA\Schema(
+     *         required={"content"},
+     *         @OA\Property(
+     *           description="Binary content of file",
+     *           property="content",
+     *           type="string",
+     *           format="binary"
+     *         )
+     *       )
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=200, description="Success",
+     *     @OA\Schema(type="string")
+     *   ),
+     *   @OA\Response(
+     *     response=400, description="Bad Request"
+     *   )
+     * )
+     */
+    public function upload(Request $request){
+        return response()->json(['success'=>true]);
+    }
 }
